[package]
name = "rtlive"
version = "0.1.0"
authors = ["Adam <davidatomhernandez@gmail.com>"]
license = "MIT"
description = "A cli for Rt live states from https://rt.live/"
readme = "README.md"
homepage = "https://github.com/ACollectionOfAtoms/rtlive-cli"
repository = "https://github.com/ACollectionOfAtoms/rtlive-cli"
keywords = ["cli", "covid", "rtlive"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
